--- a/MongoDbMarket.WebUI/Views/Home/Index.cshtml
+++ b/MongoDbMarket.WebUI/Views/Home/Index.cshtml
@@ -12,6 +12,12 @@
     <title>Index</title>
 </head>
 <body>
+    <style>
+        body{
+            font-family: 'Lato';
+        }
+    </style>
+
     <div>
         @Html.ActionLink("Добавить запись", "Add")
         <br /><br />
