--- a/MongoDbMarket.WebUI/Views/Auth/Login.cshtml
+++ b/MongoDbMarket.WebUI/Views/Auth/Login.cshtml
@@ -9,7 +9,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="~/Content/style2.css" />
+    <link rel="stylesheet" href="~/Content/style2.css?v=@DateTime.Now.Millisecond" />
     <title>Login</title>
 </head>
 <body>
