--- a/MongoDbMarket.WebUI/Content/footerStyle.css
+++ b/MongoDbMarket.WebUI/Content/footerStyle.css
@@ -89,6 +89,12 @@ header nav ul ul ul {
     top:0;
 }	
 
+.firstLi{
+    float: left;
+    margin-right: 750px;
+    padding-top: 5px;
+}
+
 #contentToFooter:after{
     content: "";
     display: block;
