--- a/MongoDbMarket.WebUI/Views/Home/Detail.cshtml
+++ b/MongoDbMarket.WebUI/Views/Home/Detail.cshtml
@@ -23,14 +23,14 @@
         <div mainDetail>
             <div class="detailGellary">
                 <div class="detailGalleryUpper">
-                    <img src="/Image/items/item1.jpg" width="500px" height="550px">
+                    <img src="~/Image/items/work7.jpg" width="500px" height="550px">
                 </div>
 
                 <div class="detailGalleryBottom">
-                    <img src="/Image/items/item2.jpg" width="120px" height="120px">
-                    <img src="/Image/items/item3.jpg" width="120px" height="120px">
-                    <img src="/Image/items/item4.jpg" width="120px" height="120px">
-                    <img src="/Image/items/item1.jpg" width="120px" height="120px">
+                    <img src="~/Image/items/work7.jpg" width="120px" height="120px">
+                    <img src="~/Image/items/work1.jpg" width="120px" height="120px">
+                    <img src="~/Image/items/work4.jpg" width="120px" height="120px">
+                    <img src="~/Image/items/work9.jpg" width="120px" height="120px">
                 </div>
             </div>
 
